# cpp-ml-library

./: .gitignore  ANN_8h_source.html  ANN_8hpp_source.html  Apriori_8h_source.html  Apriori_8hpp.html  Apriori_8hpp_source.html  CMakeLists.txt  CNN_8h_source.html  CNN_8hpp_source.html  DecisionTreeClassifier_8h_source.html  DecisionTreeClassifier_8hpp.html  DecisionTreeClassifier_8hpp_source.html  DecisionTreeRegressor_8h_source.html  DecisionTreeRegressor_8hpp.html  DecisionTreeRegressor_8hpp_source.html  Doxyfile  Eclat_8h_source.html  Eclat_8hpp.html  Eclat_8hpp_source.html  HierarchicalClustering_8hpp.html  HierarchicalClustering_8hpp_source.html  KMeans_8h_source.html  KMeans_8hpp.html  KMeans_8hpp_source.html  KNNClassifier_8hpp.html  KNNClassifier_8hpp_source.html  KNNRegressor_8hpp.html  KNNRegressor_8hpp_source.html  LogisticRegression_8hpp.html  LogisticRegression_8hpp_source.html  MultiLinearRegression_8h_source.html  MultiLinearRegression_8hpp.html  MultiLinearRegression_8hpp_source.html  NN_8h_source.html  NN_8hpp_source.html  NeuralNetwork_8hpp.html  NeuralNetwork_8hpp_source.html  PolynomialRegression_8h_source.html  PolynomialRegression_8hpp.html  PolynomialRegression_8hpp_source.html  (+84 more)
.github/: labeler.yml
.github/workflows/: CodeCoverage.yml  CodeFormatting.yml  CodeQualityandLinting.yml  Dependencies.yml  MemoryLeakCheck.yml  NightlyBuild.yml  PerformanceBenchmark.yml  StaleIssue.yml  StaticCodeAnalysis.yml  auto-label.yml  ci.yml  doxygen.yml  labels.yml  pr-in-progress.yml  release.yml
cpp-ml-library/x64/Debug/: cpp-ml-library.exe.recipe  vc143.idb
cpp-ml-library/x64/Debug/cpp-ml-library.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  cpp-ml-library.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
examples/: AprioriExample.cpp  DecisionTreeClassifierExample.cpp  DecisionTreeExample.cpp  EclatExample.cpp  HierarchicalClusteringExample.cpp  KMeansExample.cpp  KNNClassifierExample.cpp  KNNRegressorExample.cpp  LogisticRegressionExample.cpp  MultilinearRegressionExample.cpp  NNExample.cpp  NeuralNetworkExample.cpp  PolynomialRegressionExample.cpp  RandomForestClassifierExample.cpp  RandomForestExample.cpp  SupportVectorRegressionExample.cpp  ann_example.cpp  apriori_example.cpp  cnn_example.cpp  decision_tree_example.cpp  kmeans_example.cpp  nn_example.cpp  random_forest_example.cpp
include/ml/: ml.h
include/ml/neural_network/: NN.h
ml_library_include/ml/: ml.hpp
ml_library_include/ml/association/: Apriori.hpp  Eclat.hpp
ml_library_include/ml/clustering/: HierarchicalClustering.hpp  KMeans.hpp  KNNClassifier.hpp  KNNRegressor.hpp
ml_library_include/ml/neural_network/: NN.hpp  NeuralNetwork.hpp
ml_library_include/ml/regression/: LogisticRegression.hpp  MultiLinearRegression.hpp  PolynomialRegression.hpp  SupportVectorRegression.hpp
ml_library_include/ml/tree/: DecisionTreeClassifier.hpp  DecisionTreeRegressor.hpp  RandomForestClassifier.hpp  RandomForestRegressor.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  enums_0.js  enums_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  (+28 more)
src/neural_network/: NN.cpp
src/regression/: LogisticRegression.cpp  MultiLinearRegression.cpp  PolynomialRegression.cpp
tests/: AllTests.cpp  TestUtils.hpp
tests/association/: AprioriTest.cpp  EclatTest.cpp
tests/clustering/: HierarchicalClusteringTest.cpp  KMeansClusteringTest.cpp  KNNClassifierTest.cpp  KNNRegressorTest.cpp
tests/data/: ADDER.txt  DEMUX.txt  FlipFlop.txt  MUX.txt  NAND.txt  SUBTRACTOR.txt  XOR.txt
tests/neural_network/: NNTest.cpp  NeuralNetworkTest.cpp
tests/regression/: LogisticRegressionTest.cpp  MultilinearRegressionTest.cpp  MultilinearRegressionTest.cpp.txt  PolynomialRegressionTest.cpp  PolynomialRegressionTest.cpp.txt  SupportVectorRegressionTest.cpp
tests/tree/: DecisionTreeClassifierTest.cpp  DecisionTreeRegressorTest.cpp  RandomForestClassifierTest.cpp  RandomForestRegressorTest.cpp
